[tool.poetry]
name = "poetry install"
version = "0.1.0"
description = ""
authors = ["Simon <spam@esemi.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pyppeteer = "^0.2.6"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
mypy = "^0.910"
wemake-python-styleguide = "^0.15.3"
frozendict = "^2.0.6"
types-frozendict = "^0.1.6"
allure-pytest = "^2.9.43"
pytest-rerunfailures = "^10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
